--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
 
@@ -30,7 +30,7 @@
       <table class="prod_details">
         <tr>
           <td>
-          <img src="/images/icon-music.svg">
+          <img src="images/icon-music.svg">
           </td>
           <td class="details_text">
           <strong>Annual Plan</strong>
