--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/Airwolf435/OrderSummaryChallenge/blob/95d8eedad7e488de4eaa91d97c1605e5fb4e2a47/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/Airwolf435/OrderSummaryChallenge/95d8eedad7e488de4eaa91d97c1605e5fb4e2a47/images/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
 
