Uploading fix for missing images.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="order_summary">
       <div class="order_summary_header">
-        <img class="order_sum_hero" src="/images/illustration-hero.svg">
+        <img class="order_sum_hero" src="https://raw.githubusercontent.com/Airwolf435/OrderSummaryChallenge/eac7aa83f8b054f68888458ec01f198e21918ada/images/illustration-hero.svg">
       </div>
       <h1>Order Summary</h1>
 
@@ -30,7 +30,7 @@
       <table class="prod_details">
         <tr>
           <td>
-          <img src="images/icon-music.svg">
+          <img src="https://raw.githubusercontent.com/Airwolf435/OrderSummaryChallenge/eac7aa83f8b054f68888458ec01f198e21918ada/images/icon-music.svg">
           </td>
           <td class="details_text">
           <strong>Annual Plan</strong>
